style and click event on Heart

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2>Tajine</h2>
                 <p class="card-text">
                   Die tunesische Tajine kann rein vegetarisch mit Kartoffeln oder Gemüse (z.B. mit Spinat, Erbsen…) oder
@@ -109,7 +109,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2> Shakshuka</h2>
                 <p class="card-text">
                   Dieses typisch tunesische Essen ist auch im Nahen Osten beliebt, wo es von tunesischen Juden
@@ -145,7 +145,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2> Slata Mechouia</h2>
                 <p class="card-text">
                   Dieser Salat ist ein weiteres tunesisches Grundnahrungsmittel, das zu fast jeder Mahlzeit als
@@ -177,7 +177,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2> Makroudh</h2>
                 <p class="card-text">
                   Makroudh (Makroud) ist eine Gebäcksorte aus Tunesien und Algerien.
@@ -208,7 +208,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2>Fricassé</h2>
                 <p class="card-text">
                   Dies ist eines der beliebtesten Streetfoods in Tunesien. Es ist ein herzhafter gebratener Donut, der
@@ -244,7 +244,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2>Tunesische Couscous </h2>
                 <p class="card-text">
                   Couscous ist das wahrscheinlich bekannteste Gericht aus Nordafrika. Couscous ist ursprünglich ein
@@ -280,7 +280,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <a class="card-body-heart" href="##"><img src="./images/heart.svg" /></a>
+                <a class="card-body-heart" href="##"><i class="glyphicon glyphicon-heart"></i></a>
                 <h2>Molokhiya</h2>
                 <p class="card-text">
                   Die tunesische Mloukhiya wird aus den getrockneten und pulverisierten Molokheiya Blättern (auf
