--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="card" data-categ="4">
           <div class="row">
             <div class="col-md-4">
-              <img class="card-img-top" src="./images/Fricassé-768x646.jpg" />
+              <img class="card-img-top" src="./images/Fricasse-768x646.jpg" />
             </div>
             <div class="col-md-8">
               <div class="card-body">
